    - now supports multi-column foreign keys
    - fix to reflecting date/datetime columns
    - NCHAR and NVARCHAR type support added
    - Oracle:
    - Oracle has experimental support for cx_Oracle.TIMESTAMP, which requires
    a setinputsizes() call on the cursor that is now enabled via the
    'auto_setinputsizes' flag to the oracle dialect.  
- Schema:
    - added autoincrement=True to Column; will disable schema generation
    of SERIAL/AUTO_INCREMENT/identity seq for postgres/mysql/mssql if
    explicitly set to False
    - TypeEngine objects now have methods to deal with copying and comparing
    values of their specific type.  Currently used by the ORM, see below.
    - fixed condition that occurred during reflection when a primary key
    column was explciitly overridden, where the PrimaryKeyConstraint would
    get both the reflected and the programmatic column doubled up
- Connections/Pooling/Execution:
    - connection pool tracks open cursors and automatically closes them
    if connection is returned to pool with cursors still opened.  Can be
    affected by options which cause it to raise an error instead, or to 
    do nothing.  fixes issues with MySQL, others
    - fixed bug where Connection wouldnt lose its Transaction
    after commit/rollback
    - added scalar() method to ComposedSQLEngine, ResultProxy
    - ResultProxy will close() the underlying cursor when the ResultProxy
    itself is closed.  this will auto-close cursors for ResultProxy objects
    that have had all their rows fetched (or had scalar() called).
- SQL Construction:
    - changed "for_update" parameter to accept False/True/"nowait"
    and "read", the latter two of which are interpreted only by
    Oracle and Mysql [ticket:292]
    - added extract() function to sql dialect 
    (SELECT extract(field FROM expr))
    - BooleanExpression includes new "negate" argument to specify
    the appropriate negation operator if one is available.